# qp-rusty-crystals-rm

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  coverage.sh  run_all_tests.sh  taplo.toml
.github/workflows/: ci.yml  create-dilithium-release-proposal.yml  create-dilithium-release-tag-and-publish.yml  create-hdwallet-release-proposal.yml  create-hdwallet-release-tag-and-publish.yml  create-release-proposal.yml  create-release-tag-and-publish.yml
dilithium/: Cargo.toml  README.md
dilithium/benches/: dilithium_benchmarks.rs
dilithium/src/: dilithium2.rs  dilithium3.rs  dilithium5.rs  errors.rs  fips202.rs  lib.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ntt.rs  poly.rs  reduce.rs  rounding.rs
dilithium/src/packing/: lvl2.rs  lvl3.rs  lvl5.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs
dilithium/src/params/: lvl2.rs  lvl3.rs  lvl5.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs
dilithium/src/poly/: lvl2.rs  lvl3.rs  lvl5.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs
dilithium/src/polyvec/: lvl2.rs  lvl3.rs  lvl5.rs
dilithium/src/rounding/: lvl2.rs  lvl3.rs  lvl5.rs
dilithium/src/sign/: lvl2.rs  lvl3.rs  lvl5.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs
hdwallet/: Cargo.toml  README.md
hdwallet/json/: bip44_test_vectors.json
hdwallet/py/: test_vectors.py
hdwallet/src/: lib.rs  test_vectors.rs  tests.rs  wormhole.rs
src/: lib.rs
test_vectors/: README_TEST_VECTORS.md
tests/: sign_integration_tests.rs  verify_integration_test.rs
tests/helpers/: kat.rs  mod.rs
