[workspace]
members = ["dilithium", "hdwallet"]

[workspace.dependencies]
thiserror = "2.0.4"

[package]
name = "rusty-crystals"
version = "0.2.1"
edition = "2021"

[lib]
name = "rusty_crystals"
crate-type = ["lib"]

[dependencies]
rusty-crystals-dilithium = { path = "./dilithium" }
rusty-crystals-hdwallet = { path = "./hdwallet" }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8"
