[package]
name = "al-rusty-crystals-dilithium"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of CRYSTALS-Dilithium digital signature scheme"
readme = "README.md"
homepage = "https://www.quantumblockchains.io/"
repository = "https://github.com/aletheia-labs/qp-rusty-crystals-rm"
keywords = [
	"cryptography",
	"digital-signatures",
	"dilithium",
	"quantum",
	"security",
]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", optional = true }
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dilithium_benchmarks"
harness = false

[features]
no_std = []
default = ["dep:rand"]
