[package]
name = "qp-rusty-crystals-dilithium"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of CRYSTALS-Dilithium digital signature scheme"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"dilithium",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[dependencies]
rand = { version = "0.7.3", optional = true }
sha2 = { version = "0.10.8", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dilithium_benchmarks"
harness = false

[features]
no_std = []
default = ["dep:rand"]
