[package]
name = "rusty-crystals-hdwallet"
version = "0.1.1"
edition = "2024"

[dependencies]
rusty-crystals-dilithium = { path = "../dilithium" }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }
rand_chacha = { version = "0.9.0-beta.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
bip39 = { version = "2.0.0", default-features = false }
thiserror = { workspace = true }
sp-core = { version = "35.0.0", default-features = false }
poseidon-resonance = { git = "https://github.com/Quantus-Network/poseidon-resonance", default-features = false }
hex-literal = "0.4.1"

[dev-dependencies]
hex-literal = { version="0.4.1", default-features = false }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "poseidon-resonance/std",
    "rand/std",
]
no_std = []
