[package]
name = "qp-rusty-crystals-hdwallet"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of HD wallet functionality with post-quantum cryptography"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"hdwallet",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[dependencies]
qp-rusty-crystals-dilithium = { workspace = true }
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }
rand_chacha = { version = "0.9.0-beta.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
bip39 = { version = "2.0.0", default-features = false }
thiserror = { workspace = true }
sp-core = { version = "37.0.0", default-features = false }
qp-poseidon = { version = "0.9.1", default-features = false }
hex-literal = "0.4.1"
nam-tiny-hderive = { version = "0.3.1-nam.0" }
serde_json = "1.0.140"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex-literal = { version = "0.4.1", default-features = false }

[features]
default = ["std"]
std = ["qp-poseidon/std", "rand/std", "sp-core/std"]
no_std = []
